Fix wide button array overflowing the button bar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -706,7 +706,7 @@ a, a:visited, a:link {
 
   #buttonbar {
     margin-right: 0px;
-    padding-right: 0px;
+    padding-right: 15px;
     margin-top: 15px;
     height: 44px;
     opacity: 0.75;
@@ -714,7 +714,7 @@ a, a:visited, a:link {
     position: absolute;
     right: 0;
     z-index: 500;
-    width: 120px;
+    width: 400px;
   }
 
   #toolbar .customTitle {
